@@ -61,9 +61,9 @@ AC_C_CONST()
 # -------------------------------------------------------------------------------
 AC_TYPE_SIGNAL()
 
+AC_CONFIG_FILES([Makefile
+                 doc/Makefile
+                 src/Makefile
+                 data/Makefile])
 
-AC_OUTPUT([Makefile
-           doc/Makefile
-           src/Makefile
-           data/Makefile
-           po/Makefile.in])
+AC_OUTPUT([po/Makefile.in])
